Introduzione autenticazione sia Spring Cloud Config che JWT per REST.

--- a/.env
+++ b/.env
@@ -4,3 +4,11 @@ DB_HOST=postgres
 DB_NAME=configs
 DB_USER=cnr-anac
 DB_PASSWORD=
+
+# Utilizzati per l'autenticazione Basic Auth del path /config (quello usato dal Spring Cloud config)
+SECURITY_USER_NAME=config-service-user
+SECURITY_USER_PASSWORD=
+
+# Utilizzati per l'autenticazione tramite JWT degli endpoint REST del path /properties
+JWT_ISSUER_URI=https://dica33.ba.cnr.it/keycloak/realms/trasparenzai
+JWT_JWK_SET_URI=https://dica33.ba.cnr.it/keycloak/realms/trasparenzai/protocol/openid-connect/certs
