--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,16 @@ spring:
     name: config-service
   profiles:
     active: jdbc
+  security:
+    user:
+      name: config-service-user
+      password: config-service-password
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: https://dica33.ba.cnr.it/keycloak/realms/trasparenzai
+          jwk-set-uri: https://dica33.ba.cnr.it/keycloak/realms/trasparenzai/protocol/openid-connect/certs
+
   cloud:
     config:
       server:
@@ -13,7 +23,6 @@ spring:
     hibernate:
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
 flyway:
   url: jdbc:postgres://localhost:5432/configs
   user: "cnr-anac"
