--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,3 +39,11 @@ management:
   endpoints:
     web:
       base-path: /admin
+
+security:
+  oauth2:
+    enabled: true
+    roles:
+      POST: ADMIN,SUPERUSER
+      PUT: ADMIN,SUPERUSER
+      DELETE: ADMIN,SUPERUSER
